--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div>
   <h2>my student portfolio<h2>
   <font size="3px">contact</font>
-<button><p><font size="2px"><li><strong>Email:</strong><a href="#">khaledehammouda.com</a></li>
-<button><p><font size="2px"><li><strong>Github:</strong><a href="#">@khaled158</a></li></font></p></button>
-<button><p><font size="2px"><li><strong>Phone Number:</strong></li><strong>1(347)421-3327</strong></font></p></button></font></p></button>
+<button id="btn">Email:khaledehammouda.com</button>
+<button id="btn-2">Github:@khaled158</button>
+<button id="btn-3">Phone Number:1(347)421-3327</button>
 <link rel="stylesheet" type="text/css" href="style.css">
-<img src="pro.JPG"> <h3>
+<img src="pro.JPG" width="240"><h3>
 </div>
 </header> 
        <section> <p>Hi everyone my name is Khaled hammouda, this is my bio.I will be tell you a little bit about my self. I'm 31 years old i've live in NYC since i was 5 years of age.I love to swim and fix anything that needs to be fixed and brought back to life. I'm an "Aircraft Engineer" and a sailer i know that thoues too dont really go togther but what can i say i love doing thing's that's out of the ordinary.</section>
