--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-us">
- <head>
-  <meta charset="UTF-8">
-  <title>CSS Stylesheets with Relative Paths</title>
-  </head>
-<body>
-   <header>
-    <div>
-  <h2>my student portfolio<h2>
-  <font size="3px">contact</font>
-<button id="btn">Email:khaledehammouda.com</button>
-<button id="btn-2">Github:@khaled158</button>
-<button id="btn-3">Phone Number:1(347)421-3327</button>
-<link rel="stylesheet" type="text/css" href="style.css">
-<img src="pro.JPG" width="240"><h3>
-</div>
-</header> 
-       <section> <p>Hi everyone my name is Khaled hammouda, this is my bio.I will be tell you a little bit about my self. I'm 31 years old i've live in NYC since i was 5 years of age.I love to swim and fix anything that needs to be fixed and brought back to life. I'm an "Aircraft Engineer" and a sailer i know that thoues too dont really go togther but what can i say i love doing thing's that's out of the ordinary.</section>
-    </header>
+  <body> 
+    <head>
+         <p class="my_bio">This is my bio</p>
+    </head>
+   <section class="bio_contaner">  
+      <div class="bio_img">
+        <img src="pro.JPG" width="240px">
+      </div> 
+      <p class="bio">
+          Hi everyone my name is Khaled hammouda, this is my bio.I will be tell you a little bit about my self. I'm 31 years old i've live in NYC since i was 5 years of age.I love to swim and fix anything that needs to be fixed and brought back to life. I'm an "Aircraft Engineer" and a sailer i know that thoues too dont really go togther but what can i say i love doing thing's that's out of the ordinary.
+        </p>
+   </section>
+   <footer>
+     <div class="footer_container">
+        <font size="3px">contact:</font>
+        <a href="https://columbia.bootcampcontent.com/Khaled158" class="btn">Gitlab: @khaled158</a>
+        <a href="https://github.com/khaled212" class="btn">Github: @khaled158</a>
+        <a id="btn-3">Phone Number: 1(347)421-3327</a>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </div>
+    </footer>
   </body>
 </html>
